--- a/.github/workflows/jd_blueCoin.yaml
+++ b/.github/workflows/jd_blueCoin.yaml
@@ -40,4 +40,5 @@ jobs:
                   DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET || github.event.client_payload.DD_BOT_SECRET }}
                   MARKET_COIN_TO_BEANS: ${{ secrets.MARKET_COIN_TO_BEANS || github.event.client_payload.MARKET_COIN_TO_BEANS }}
                   MARKET_REWARD_NOTIFY: ${{ secrets.MARKET_REWARD_NOTIFY || github.event.client_payload.MARKET_REWARD_NOTIFY }}
+                  JD_USER_AGENT: ${{ secrets.JD_USER_AGENT || github.event.client_payload.JD_USER_AGENT }}
                   SYNCURL: https://github.com/lxk0301/jd_scripts/raw/master/jd_blueCoin.js
