--- a/.github/workflows/jd_daily_bonus.yaml
+++ b/.github/workflows/jd_daily_bonus.yaml
@@ -33,4 +33,5 @@ jobs:
                   TG_USER_ID: ${{ secrets.TG_USER_ID || github.event.client_payload.TG_USER_ID }}
                   DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN || github.event.client_payload.DD_BOT_TOKEN }}
                   DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET || github.event.client_payload.DD_BOT_SECRET }}
+                  JD_USER_AGENT: ${{ secrets.JD_USER_AGENT || github.event.client_payload.JD_USER_AGENT }}
                   SYNCURL: https://github.com/lxk0301/jd_scripts/raw/master/jd_bean_sign.js
